--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     <img src="~/LaytonTemple.image.jpg" style="width:750px;"/>
     
 
-    <a asp-action="Form">Schedule a Tour</a>
+    <a asp-action="SignUp">Schedule a Tour</a>
 </div>
