--- a/Project1/Views/Home/Form.cshtml
+++ b/Project1/Views/Home/Form.cshtml
@@ -2,31 +2,32 @@
 @{
     ViewData["Title"] = "Sign Up Confirmation";
 }
-
+@model FormViewModel
 <h1>Tour Appointment Confirmation</h1>
 
 <form>
-
     <label>Appointment: </label>
+        <input type="text" value="@ViewBag.Time" readonly />
     <br />
 
-    <label>Group Name: </label>
-    <input required />
+    <label asp-for="appointment.GroupName">Group Name: </label>
+        <input type="text" asp-for="appointment.GroupName" required />
     <br />
 
-    <label>Group Size: </label>
-    <input type="number" min="1" max="30" required />
+    <label asp-for="appointment.GroupSize">Group Size: </label>
+        <input type="number" asp-for="appointment.GroupSize" min="1" max="30" required />
     <br />
 
-    <label>Email Address: </label>
-    <input type="email" required />
+    <label asp-for="appointment.Email">Email Address: </label>
+        <input type="email" asp-for="appointment.Email" required />
     <br />
 
-    <label>Phone Number: </label>
-    <input type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" />
+    <label asp-for="appointment.Phone">Phone Number: </label>
+        <input type="tel" asp-for="appointment.Phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" />
     <br />
+
+    <input type="hidden" asp-for="time.AvailableTime" />
+    <input type="hidden" asp-for="time.TimeId" />
 
     <button type="submit">Confirm</button>
-
-
 </form>
