--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Layton Temple Tour</h1>
-    <img src="~/LaytonTemple.image.jpg" style="width:750px;"/>
-    
+    <img src="~/LaytonTemple.image.jpg" style="width:750px;" />
+</div>   
 
-    <a asp-action="ViewAppointments">Schedule a Tour</a>
-</div>
+<btn asp-action="ViewAppointments" class="text-center">Schedule a Tour</btn>
+
