--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     <img src="~/LaytonTemple.image.jpg" style="width:750px;" />
 </div>   
 
-<btn asp-action="ViewAppointments" class="text-center">Schedule a Tour</btn>
+<button asp-action="SignUp" class="text-center">Schedule a Tour</button>
 
