--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -9,5 +9,5 @@
 
 <br />
 
-<button asp-action="SignUp" class="text-center">Schedule a Tour</button>
+<a href="/Home/SignUp" class="btn-dark btn-block btn-primary">Schedule a Tour</a>
 
