Added some more bootstrap

--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -4,10 +4,11 @@
 
 <div class="text-center">
     <h1 class="display-4">Layton Temple Tour</h1>
+    <br />
     <img src="~/LaytonTemple.image.jpg" style="width:750px;" />
 </div>
 
 <br />
 
-<a href="/Home/SignUp" class="btn-dark btn-block btn-primary">Schedule a Tour</a>
+<a href="/Home/SignUp" class="btn btn-block btn-primary">Schedule a Tour</a>
 
