--- a/Project1/Views/Home/SignUp.cshtml
+++ b/Project1/Views/Home/SignUp.cshtml
@@ -7,13 +7,14 @@
 <br />
 <div class="row">
     <div class="col-3">
-        <h2>Monday 3/15/2021</h2>
+        <h4 class="text-center">Monday 3/15/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 15)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -22,29 +23,30 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
-
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
 
     <div class="col-3">
-        <h2>Tuesday 3/16/2021</h2>
+        <h4 class="text-center">Tuesday 3/16/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 16)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -53,28 +55,30 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
     <div class="col-3">
-        <h2>Wednesday 3/17/2021</h2>
+        <h4 class="text-center">Wednesday 3/17/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 17)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -83,28 +87,30 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
     <div class="col-3">
-        <h2>Thursday 3/18/2021</h2>
+        <h4 class="text-center">Thursday 3/18/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 18)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -113,30 +119,32 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
 </div>
 <div class="row">
     <div class="col-4">
-        <h2>Friday 3/19/2021</h2>
+        <h4 class="text-center">Friday 3/19/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 19)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -145,28 +153,30 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
     <div class="col-4">
-        <h2>Saturday 3/20/2021</h2>
+        <h4 class="text-center">Saturday 3/20/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 20)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -175,28 +185,30 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
     <div class="col-4">
-        <h2>Sunday 3/21/2021</h2>
+        <h4 class="text-center">Sunday 3/21/2021</h4>
+        <hr />
         @foreach (var x in Model.availableTimes)
         {
             @if (x.AvailableTime.Day == 21)
             {
-                <div class="row">
-                    <h3>
+                <div class="row align-items-center justify-content-around">
+                    <h5>
                         @if (x.AvailableTime.Hour > 12)
                         {
                             @(x.AvailableTime.Hour - 12 + ":00 PM");
@@ -205,17 +217,18 @@
                         {
                             @(x.AvailableTime.Hour + ":00 AM");
                         }
-                    </h3>
+                    </h5>
                     <form method="post" asp-action="SignUp">
                         <input hidden asp-for="TimeId" value="@x.TimeId" />
                         <input hidden asp-for="Year" value="@x.AvailableTime.Year" />
                         <input hidden asp-for="Hour" value="@x.AvailableTime.Hour" />
                         <input hidden asp-for="Month" value="@x.AvailableTime.Month" />
                         <input hidden asp-for="Day" value="@x.AvailableTime.Day" />
-                        <button type="submit" id="submit">Reserve</button>
+                        <button type="submit" id="submit" class="btn btn-block btn-primary">Reserve</button>
 
                     </form>
                 </div>
+                <hr />
             }
         }
     </div>
