--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -5,10 +5,37 @@
 <div class="text-center">
     <h1 class="display-4">Layton Temple Tour</h1>
     <br />
-    <img src="~/LaytonTemple.image.jpg" style="width:750px;" />
+    <img src="~/layton-utah-temple-6932-main.jpg" style="width:750px;" />
 </div>
 
 <br />
 
+<h3>General Tour Instructions</h3>
+<ul>
+    <li>Masks are required.</li>
+    <li>Park on Rosewood (West side of the temple) and meet at the Visitors' Center trailer.</li>
+    <li>Dress casual, except on Sunday.</li>
+</ul>
+<br />
+<h3>Available Tours:</h3>
+<ul>
+    <li>Outdoor Tours</li>
+    <li>Trailer Tours</li>
+</ul>
+
+<br />
+
 <a href="/Home/SignUp" class="btn btn-block btn-primary">Schedule a Tour</a>
+
+<br />
+
+<p>Please call 801-628-4488 or email LaytonTempleTours@gmail.com with questions or special requests.</p>
+
+<br />
+
+<p>
+    Location: Layton Utah Temple, 1500 E Oak Hills Drive, Layton, UT 84040
+</p>
+
+
 
